--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^5.6|^7.0",
+        "sylius/sylius": "^1.0.0@beta",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
