--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,7 +2,7 @@ services:
     bitbag.payu.form.type.gateway_configuration:
         class: BitBag\PayUPlugin\Form\Type\PayUGatewayConfigurationType
         tags:
-            - { name: sylius.gateway_configuration_type, type: payu, label: bitbag.payum_gateway_factory.payu }
+            - { name: sylius.gateway_configuration_type, type: payu, label: bitbag.payu_plugin.gateway_label }
             - { name: form.type }
 
     bitbag.payu.gateway_factory:
