[Git] Update gitignore dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /vendor
-/.idea
-.DS_STORE
 
-tests/Application/web
 !tests/Application/web/app_test.php
+tests/Application/web/*
+!tests/Application/web/.gitkeep
 
 /etc/build/*
 !/etc/build/.gitkeep
