[Travis] Add composer install

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,20 @@ php:
 cache:
     directories:
         - ~/.composer/cache/files
-#    yarn: true
+    #yarn: true
 
 before_install:
     - phpenv config-rm xdebug.ini || true
     - echo "memory_limit=4096M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 install:
-    - composer update --prefer-dist
-#    - (cd tests/Application && yarn install)
+    - composer install
+    #- (cd tests/Application && yarn install)
 
 before_script:
     - (cd tests/Application && bin/console doctrine:schema:create --env=test)
     - (cd tests/Application && bin/console assets:install web --env=test)
-#    - (cd tests/Application && yarn run gulp)
+    #- (cd tests/Application && yarn run gulp)
 
     - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1680x1050x16
     - export DISPLAY=:99
