--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
-        "sylius/sylius": "^1.0.0@beta",
+        "php": "^7.1",
+        "sylius/sylius": "^1.0.0.rc-2",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
