--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "sylius/sylius": "^1.0.0.rc-2",
+        "sylius/sylius": "^1.0@beta",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
