--- a/src/phpspec.yml.dist
+++ b/src/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
     main:
-        namespace: BitBag\PayUPlugin
-        psr4_prefix: BitBag\PayUPlugin
+        namespace: BitBag\SyliusPayUPlugin
+        psr4_prefix: BitBag\SyliusPayUPlugin
