--- a/tests/Behat/Resources/mocker.yml
+++ b/tests/Behat/Resources/mocker.yml
@@ -1,5 +1,5 @@
 services:
     bitbag.payu_plugin.mocker.payu_api:
-        class: Tests\BitBag\PayUPlugin\Behat\Mocker\PayUApiMocker
+        class: Tests\BitBag\SyliusPayUPlugin\Behat\Mocker\PayUApiMocker
         arguments:
             - '@sylius.behat.mocker'
