--- a/composer.json
+++ b/composer.json
@@ -15,24 +15,34 @@
     ],
     "require": {
         "php": "^7.1",
-        "sylius/sylius": "^1.0@beta",
+        "sylius/sylius": "~1.4",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.2",
-        "behat/behat": "^3.3",
-        "behat/mink": "^1.7",
+        "behat/behat": "^3.4",
+        "behat/mink": "^1.7@dev",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
-        "friends-of-behat/context-service-extension": "^0.3",
-        "friends-of-behat/cross-container-extension": "^0.2",
-        "friends-of-behat/performance-extension": "^1.0",
-        "friends-of-behat/service-container-extension": "^0.3",
-        "friends-of-behat/symfony-extension": "^0.2.1",
-        "friends-of-behat/variadic-extension": "^0.1",
+        "friends-of-behat/page-object-extension": "^0.3",
+        "friends-of-behat/suite-settings-extension": "^1.0",
+        "friends-of-behat/symfony-extension": "^2.0",
+        "friends-of-behat/variadic-extension": "^1.1",
         "lakion/mink-debug-extension": "^1.2.3",
-        "se/selenium-server-standalone": "^2.52"
+        "phpspec/phpspec": "^5.0",
+        "phpstan/phpstan-doctrine": "^0.10",
+        "phpstan/phpstan-shim": "^0.10",
+        "phpstan/phpstan-symfony": "^0.10",
+        "phpstan/phpstan-webmozart-assert": "^0.10",
+        "phpunit/phpunit": "^6.5",
+        "sensiolabs/security-checker": "^5.0",
+        "sylius-labs/coding-standard": "^2.0",
+        "symfony/browser-kit": "^3.4|^4.1",
+        "symfony/debug-bundle": "^3.4|^4.1",
+        "symfony/dotenv": "^4.2",
+        "symfony/intl": "^3.4|^4.1",
+        "symfony/web-profiler-bundle": "^3.4|^4.1",
+        "symfony/web-server-bundle": "^3.4|^4.1"
     },
     "autoload": {
         "psr-4": {
