Upgrade to Sylius 1.4
Replace yaml services configuration too xml

--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,8 @@
             "BitBag\\SyliusPayUPlugin\\": "src/",
             "Tests\\BitBag\\SyliusPayUPlugin\\": "tests/"
         }
+    },
+    "config": {
+        "bin-dir": "bin"
     }
 }
