--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -7,7 +7,7 @@ default:
         FriendsOfBehat\SymfonyExtension:
             bootstrap: tests/Application/config/bootstrap.php
             kernel:
-                class: Tests\Acme\SyliusExamplePlugin\Application\Kernel
+                class: Tests\BitBag\SyliusPayUPlugin\Application\Kernel
 
         FriendsOfBehat\VariadicExtension: ~
 
