--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.3",
         "sylius/sylius": "~1.4",
-        "openpayu/openpayu": "^2.2"
+        "openpayu/openpayu": "^2.2",
+        "phpspec/phpspec": "^6.2"
     },
     "require-dev": {
         "behat/behat": "^3.4",
-        "behat/mink": "^1.7@dev",
+        "behat/mink": "^1.7",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
@@ -29,7 +30,6 @@
         "friends-of-behat/symfony-extension": "^2.0",
         "friends-of-behat/variadic-extension": "^1.1",
         "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^5.0",
         "phpstan/phpstan-doctrine": "^0.10",
         "phpstan/phpstan-shim": "^0.10",
         "phpstan/phpstan-symfony": "^0.10",
