--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "sylius/sylius": "^1.10",
+        "sylius/sylius": "^1.9 || ^1.10",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
@@ -36,7 +36,7 @@
         "phpstan/phpstan": "0.12.90",
         "phpstan/phpstan-doctrine": "0.12.39",
         "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.4",
+        "phpstan/phpstan-webmozart-assert": "0.12.9",
         "sensiolabs/security-checker": "^6.0",
         "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "^3.1",
