--- a/composer.json
+++ b/composer.json
@@ -62,5 +62,8 @@
     },
     "autoload-dev": {
         "classmap": ["tests/Application/Kernel.php"]
+    },
+    "config": {
+        "allow-plugins": true
     }
 }
