--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,19 +20,15 @@ jobs:
   strategy:
    fail-fast: false
    matrix:
-    php: [ 7.4, 8.0 ]
-    symfony: [ ^4.4, ^5.2 ]
-    sylius: [ ~1.9, ~1.10, ~1.11 ]
+    php: [  8.0 ]
+    symfony: [ ^5.4, ^6.0 ]
+    sylius: [  ~1.11.0, ~1.12.0 ]
     node: [ 14.x ]
     mysql: [ 8.0 ]
 
     exclude:
-        -   sylius: ~1.9
-            php: 8.0
-        -   sylius: ~1.10
-            symfony: 4.4
         -   sylius: ~1.11
-            php: 7.4
+            symfony: ^6.0
   env:
    APP_ENV: test
    DATABASE_URL: "mysql://root:root@127.0.0.1/sylius?serverVersion=${{ matrix.mysql }}"
