--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "sylius/sylius": "~1.9.0 || ~1.10.0 || ~1.11.0",
+        "php": "^8.0",
+        "sylius/sylius": " ~1.12.0",
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
@@ -35,12 +35,11 @@
         "sensiolabs/security-checker": "^6.0",
         "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "~4.1.0",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "symfony/web-server-bundle": "^4.4|^5.2",
+        "symfony/browser-kit": "^6.0 || ^5.4",
+        "symfony/debug-bundle": "^6.0 || ^5.4",
+        "symfony/dotenv": "^6.0 || ^5.4",
+        "symfony/intl": "^6.0 || ^6.0",
+        "symfony/web-profiler-bundle": "^6.0 || ^5.4",
         "vimeo/psalm": "4.16.1",
         "symfony/dependency-injection": "<4.4.19 || ^5.2",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
