Added webpack encore

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "openpayu/openpayu": "^2.2"
     },
     "require-dev": {
+        "symfony/webpack-encore-bundle": "^1.15",
         "behat/behat": "^3.7",
         "behat/mink-selenium2-driver": "^1.4",
         "dmore/behat-chrome-extension": "^1.3",
