--- a/tests/Application/config/sylius/1.12/packages/jms_serializer.yaml
+++ b/tests/Application/config/sylius/1.12/packages/jms_serializer.yaml
@@ -1,4 +1,4 @@
-#jms_serializer:
-#  visitors:
-#    xml_serialization:
-#      format_output: '%kernel.debug%'
+jms_serializer:
+  visitors:
+    xml_serialization:
+      format_output: '%kernel.debug%'
