--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": "^8.0",
         "sylius/sylius": "~1.11.0 || ~1.12.0",
-        "openpayu/openpayu": "^2.2"
+        "openpayu/openpayu": "^2.2",
+        "php-http/message-factory": "^1.1"
     },
     "require-dev": {
         "symfony/webpack-encore-bundle": "^1.15",
