--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,4 +150,15 @@ jobs:
 
    - name: Run Behat
      run: vendor/bin/behat --colors --strict -vvv --no-interaction || vendor/bin/behat --colors --strict -vvv --no-interaction --rerun
-
+            
+   - name: Failed build Slack notification
+     uses: rtCamp/action-slack-notify@v2
+     if: ${{ failure() && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}
+     env:
+         SLACK_CHANNEL: ${{ secrets.FAILED_BUILD_SLACK_CHANNEL }}
+         SLACK_COLOR: ${{ job.status }}
+         SLACK_ICON: https://github.com/rtCamp.png?size=48
+         SLACK_MESSAGE: ':x:'
+         SLACK_TITLE: Failed build on ${{ github.event.repository.name }} repository
+         SLACK_USERNAME: ${{ secrets.FAILED_BUILD_SLACK_USERNAME }}
+         SLACK_WEBHOOK: ${{ secrets.FAILED_BUILD_SLACK_WEBHOOK }}
