--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "friends-of-behat/variadic-extension": "^1.3",
         "phpspec/phpspec": "^7.0",
         "phpunit/phpunit": "^9.5",
-        "sylius-labs/coding-standard": "~4.1.0",
+        "sylius-labs/coding-standard": "^4.1",
         "symfony/browser-kit": "^6.0 || ^5.4",
         "symfony/debug-bundle": "^6.0 || ^5.4",
         "symfony/dotenv": "^6.0 || ^5.4",
@@ -44,7 +44,7 @@
         "vimeo/psalm": "4.16.1",
         "symfony/dependency-injection": "<4.4.19 || ^5.2",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "bitbag/coding-standard": "^2.0"
+        "bitbag/coding-standard": "^3.0"
     },
     "conflict": {
         "symfony/symfony": "4.1.8",
