--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ jobs:
         node: [ "^14.17.x" ]
         mysql: [ "5.7", "8.0" ]
     
+        exclude:
+          - sylius: "~1.13.0"
+            php: "8.0"
+    
     env:
       APP_ENV: test
       DATABASE_URL: "mysql://root:root@127.0.0.1/sylius?serverVersion=${{ matrix.mysql }}"
